--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <title>MCPECilent 官网</title>
 </head>
- 
+ <div style="background-image: url('/IMG_20240506_210500.jpg');">
+                                                                                       
 <body>
 <p>MCPECilent/鞋带/流畅/音乐的全能客户端</p>
 <p>不妨试一试</p>
